第一章初稿

--- a/book-handson-ml2/01_the_machine_learning_landscape/01_the_machine_learning_landscape.ipynb
+++ b/book-handson-ml2/01_the_machine_learning_landscape/01_the_machine_learning_landscape.ipynb
@@ -216,77 +216,149 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.5 机器学习的主要调整"
+    "## 1.5 机器学习的主要挑战\n",
+    "\n",
+    "最可能出现的两个问题不外乎是\"坏数据\"和\"坏算法\"。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5.1 训练数据的数量不足"
+    "### 1.5.1 训练数据的数量不足\n",
+    "\n",
+    "教一个牙牙学语的小朋友什么是苹果，只需要指着苹果说\"苹果\"，可能重复几次后孩子就能识别苹果了。\n",
+    "\n",
+    "机器学习还没达到这一步，大部分机器学习算法需要大量的数据才能正常工作。即使是最简单的问题，很可能也需要成千上万个示例。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5.2 训练数据不具代表性"
+    "### 1.5.2 训练数据不具代表性\n",
+    "\n",
+    "为了很好地实现泛化（预测），至关重要的一点是对于将要泛化的新示例来说，训练数据一定要非常有代表性。\n",
+    "\n",
+    "例如，2016年美国总统大选时，特朗普在各种民调支持中都比对手低，但投票结果却相反。\n",
+    "\n",
+    "下图是人均GDP和生活满意度的调查，X轴是人均GDP，Y轴是生活满意度\n",
+    "\n",
+    "![gdp1](imgs/gdp1.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5.3 低质量数据"
+    "### 1.5.3 低质量数据\n",
+    "\n",
+    "如果训练集满是错误、异常值和噪声，系统更难检测到底层模式，更不太可能表现良好。\n",
+    "\n",
+    "花时间来清理训练数据是非常值得的投入。\n",
+    "\n",
+    "* 常用做法\n",
+    "1. 数据明显异常的情况，直接丢弃或尝试手动修复实例\n",
+    "2. 某些实例缺少部分特征的情况，必须决定是整体忽略特征，还是将缺失值补充完整"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5.4 无关特征"
+    "### 1.5.4 无关特征\n",
+    "\n",
+    "正如我们常说的：垃圾入，垃圾出。只有训练数据里包含足够多的相关特征以及较少的无关特征，系统才能够完成学习。\n",
+    "\n",
+    "一个成功的机器学习项目，其关键部分是提取出一组好的用来训练的特征集。这个过程叫做特征工程。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5.5 过拟合训练数据"
+    "### 1.5.5 过拟合训练数据\n",
+    "\n",
+    "为了贴合每一个点，预测的曲线很可能如下图所示，但根据这个预测，当人均GDP在60000刀的时候，满意度为0（或者说是负数），这明显是错误的。\n",
+    "\n",
+    "通过约束模型使其更简单，并降低过拟合的风险，这个过程成为正则化。\n",
+    "\n",
+    "![gdp2](imgs/gdp2.png)\n",
+    "\n",
+    "![gdp3](imgs/gdp3.png)\n",
+    "\n",
+    "解决方式：\n",
+    "\n",
+    "1. 简化模型，选择较少参数的模型\n",
+    "2. 收集更多训练数据\n",
+    "3. 减少数据中的噪声"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5.6欠拟合训练数据"
+    "### 1.5.6欠拟合训练数据\n",
+    "\n",
+    "欠拟合和过拟合正好相反，通常是因为模型过于简单。\n",
+    "\n",
+    "解决这个问题主要方式有：\n",
+    "\n",
+    "1. 选择一个更强大的模型\n",
+    "2. 提供更好地特征集\n",
+    "3. 减少模型中的约束\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5.7 退后一步"
+    "### 1.5.7 退后一步\n",
+    "\n",
+    "总结一下：\n",
+    "\n",
+    "* 机器学习是处理某些特定任务的理论，它从数据中学习，而无需硬编码。\n",
+    "* 机器学习系统分为很多类型：有监督、无监督和无监督，批量（全量）和在线（增量），基于实例的和基于模型的，等等\n",
+    "* 处理\"坏数据\"和\"坏算法\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.6 测试和验证"
+    "## 1.6 测试和验证\n",
+    "\n",
+    "了解一个模型对新场景的泛化能力的唯一办法就是让模型真实地去处理新场景。\n",
+    "\n",
+    "我们会将数据集分割为两部分：训练集和测试集。顾名思义，用训练集来训练模型，然后用测试集来测试模型。通常是按80%训练集，20%测试集的比例来分割。（通常还会将训练集划分为训练集和验证集，使用验证集来进行评估模型的效果）\n",
+    "\n",
+    "如果训练误差很低，测试集误差高，说明过拟合了。\n",
+    "\n",
+    "如果训练集和测试集误差都很高，很可能是欠拟合了。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.6.1 超参数调整和模型选择"
+    "### 1.6.1 超参数调整和模型选择\n",
+    "\n",
+    "在机器学习中，超参数是在开始学习之前设置的参数。比如正则化的强度、判断阈值等等。\n",
+    "\n",
+    "当你在两个模型间犹豫不决时，可以对比它们对测试数据的泛化能力，来确定使用哪一个模型。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.6.2 数据不匹配"
+    "### 1.6.2 数据不匹配\n",
+    "\n",
+    "训练和生产环境的数据不一致。例如你训练了一个识别花卉的模型，是从网上收集到数百万的图片进行训练。但是生产环境中，使用者是使用手机拍摄的照片，与训练的图片有很大差异。\n",
+    "\n",
+    "这种情况下，可以将生产环境中使用的数据具有相同代表性的图片混洗后，一半放入验证集，一半放入测试集。训练完成后使用验证集性能很差时，此时无法判断是因为模型过拟合，还是因为数据不匹配导致的。\n",
+    "\n",
+    "一种解决方案是从训练集中再分出一部分作为训练开发集（train-dev），即先在训练集中训练模型，之后分别在训练开发集和验证集中预测，如果在训练开发集中表现良好，说明没有过拟合；与此同时，在验证集中表现不好，说明确实是因为数据不匹配。（如果模型在训练开发集和验证集上都不佳，说明模型过拟合了）"
    ]
   }
  ],
