--- a/book-handson-ml2/01_the_machine_learning_landscape/01_the_machine_learning_landscape.ipynb
+++ b/book-handson-ml2/01_the_machine_learning_landscape/01_the_machine_learning_landscape.ipynb
@@ -18,9 +18,7 @@
     "\n",
     "机器学习是一门通过编程让计算机从数据中进行学习的学科（和艺术）。\n",
     "\n",
-    "* 举例\n",
-    "\n",
-    "抖音、快手等短视频软件，通过用户点赞、收藏、停留时间等数据，学习用户喜好，最终让用户沉迷刷视频无法自拔。\n",
+    "在不知不觉中，机器学习已经进入我们生活的每个角落。手机的语音助手，人脸解锁，短视频推荐，购物推荐，翻译，相机美颜，等等。\n",
     "\n",
     "* 反例\n",
     "\n",
@@ -45,7 +43,7 @@
     "\n",
     "* 疑问：当新的词汇出现，不都有工作量吗？\n",
     "\n",
-    "确实都需要工作量，传统编程需要修改程序，或者往枚举库里添加新短语；机器学习需要重新收集标题和对应的标签。但是当机器学习配上自动化就真香了，例如在文章中加上\"赞\"/\"踩\"的功能，这样通过用户的点击就能不断自我学习。总得来说，就是工作量是用户帮我们做了。\n",
+    "确实都需要工作量，传统编程需要修改程序，或者往枚举库里添加新短语；机器学习需要重新收集标题和对应的标签。但是当机器学习配上自动化就真香了，例如在文章中加上\"赞\"/\"踩\"的功能，或者通过用户的阅读时长，通过用户的行为就能不断自我学习。总得来说，就是工作量是用户帮我们做了。\n",
     "\n",
     "* 总结，机器学习适用于：\n",
     "\n",
@@ -100,11 +98,15 @@
    "source": [
     "#### 有监督学习\n",
     "\n",
-    "在有监督学习中，提供给算法的包含所需解决方案的训练集成为标签。简单来说，标签就是提供给算法的标准答案。\n",
+    "在有监督学习中，开发人员会为所有数据添加对应的标签。例如我们要做个猫狗的分类器，会收集猫和狗的照片，然后明确得告诉算法，当前的照片对应的是猫是狗。\n",
     "\n",
-    "分类任务是一个经典的有监督学习任务。垃圾邮件过滤器是很好的示例，通过大量电子邮件和所属分类(垃圾邮件还是常规邮件)进行训练，然后学习如何对新邮件进行分类。\n",
+    "猫\n",
     "\n",
-    "另一个经典的任务是通过给定一组成为预测器的特征(里程、使用年限、品牌等)来预测一个目标值（二手车价格）。这种类型的任务成为回归。"
+    "![imgs/cat-set.png](imgs/cat-set.png)\n",
+    "\n",
+    "狗\n",
+    "\n",
+    "![imgs/dog-set.png](imgs/dog-set.png)\n"
    ]
   },
   {
@@ -117,7 +119,7 @@
     "\n",
     "* 聚类\n",
     "\n",
-    "例如当你走进公园，看到很多植物，你可以分出哪些植物是同个种类，但就是叫不出名字。这时就可以通过聚类算法来检测相似的植物分组。\n",
+    "例如当你走进公园，看到很多植物，你可以分出哪些植物是同个种类，但就是叫不出名字。这时就可以通过聚类算法来对相似的植物分组。\n",
     "\n",
     "* 异常检测\n",
     "\n",
@@ -192,11 +194,11 @@
    "source": [
     "#### 基于实例的学习\n",
     "\n",
-    "根据相似度度量来比较新的实例和已经学习的示例，从而泛化新实例。\n",
+    "根据相似度度量来比较新的实例和已经学习的示例，从而泛化（预测）新实例。\n",
     "\n",
     "比如下图中的动物，你可能不知道这是一只约克夏，但不妨碍你把它归类为狗而不是猫，因为它长得像一只狗而不像一只猫。\n",
     "\n",
-    "\"长得像/不像\"就是根据相似度，对比以前看过的猫和狗，从而做出预测（泛化）。\n",
+    "\"长得像/不像\"就是根据相似度，对比以前看过的猫和狗，从而做出泛化（预测）。\n",
     "\n",
     "![dog](imgs/dog.png)"
    ]
@@ -318,7 +320,7 @@
     "总结一下：\n",
     "\n",
     "* 机器学习是处理某些特定任务的理论，它从数据中学习，而无需硬编码。\n",
-    "* 机器学习系统分为很多类型：有监督、无监督和无监督，批量（全量）和在线（增量），基于实例的和基于模型的，等等\n",
+    "* 机器学习系统分为很多类型：有监督、无监督和半监督，批量（全量）和在线（增量），基于实例的和基于模型的，等等\n",
     "* 处理\"坏数据\"和\"坏算法\""
    ]
   },
@@ -330,7 +332,9 @@
     "\n",
     "了解一个模型对新场景的泛化能力的唯一办法就是让模型真实地去处理新场景。\n",
     "\n",
-    "我们会将数据集分割为两部分：训练集和测试集。顾名思义，用训练集来训练模型，然后用测试集来测试模型。通常是按80%训练集，20%测试集的比例来分割。（通常还会将训练集划分为训练集和验证集，使用验证集来进行评估模型的效果）\n",
+    "我们会将数据集分割为两部分：训练集和测试集。顾名思义，用训练集来训练模型，然后用测试集来测试模型。通常是按80%训练集，20%测试集的比例来分割。\n",
+    "\n",
+    "通常还会将训练集划分为训练集和验证集（即：50%训练集，30%验证集，20%测试集），使用验证集来进行评估模型的效果。\n",
     "\n",
     "如果训练误差很低，测试集误差高，说明过拟合了。\n",
     "\n",
