--- a/book-handson-ml2/01_the_machine_learning_landscape/01_the_machine_learning_landscape.ipynb
+++ b/book-handson-ml2/01_the_machine_learning_landscape/01_the_machine_learning_landscape.ipynb
@@ -7,7 +7,8 @@
     "# 第一章 机器学习概览\n",
     "\n",
     "* 原书代码地址： [01_the_machine_learning_landscape.ipynb](https://github.com/ageron/handson-ml2/blob/master/01_the_machine_learning_landscape.ipynb)\n",
-    "* 本章地址：[Gitee](https://gitee.com/XuXiaoCong/learn-ai/blob/master/book-handson-ml2/01_the_machine_learning_landscape/01_the_machine_learning_landscape.ipynb) / [Github](https://github.com/xuxiaocong/learn-ai/blob/master/book-handson-ml2/01_the_machine_learning_landscape/01_the_machine_learning_landscape.ipynb)"
+    "* 本章地址：[Gitee](https://gitee.com/XuXiaoCong/learn-ai/blob/master/book-handson-ml2/01_the_machine_learning_landscape/01_the_machine_learning_landscape.ipynb) / [Github](https://github.com/xuxiaocong/learn-ai/blob/master/book-handson-ml2/01_the_machine_learning_landscape/01_the_machine_learning_landscape.ipynb)\n",
+    "* 视频地址：[bilibili](https://www.bilibili.com/video/BV1xP4y1K7hx)"
    ]
   },
   {
